# system-monitor

./: Cargo.toml  Dockerfile  build.rs  control.proto
config/: programs.json
proto/: sysmon.proto
src/: errors.rs  lib.rs  main.rs  program.rs  program_manager.rs  sysm.rs  sysmd.rs
