[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sysmd"
path = "src/sysmd.rs"

[[bin]]
name = "sysm"
path = "src/sysm.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive"] }
prost = "0.11.6"
tonic = "0.8.3"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"
